# Rock-Paper-Scissors

./: .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  README.md  cdm.json  dist.car  package.json  polkadot-app-deploy.config.ts  setup.sh  tsconfig.tsbuildinfo
.github/: DEPLOY_SUMMIT.md  copilot-instructions.md
.github/workflows/: ci.yml  deploy-paseo-next.yml  deploy-summit.yml
contracts/leaderboard/: Cargo.toml
scripts/: patch-pjs-signer.mjs
src/: App.tsx  utils.ts
