[workspace]
resolver = "2"
members = ["contracts/leaderboard"]

[workspace.package]
version = "0.1.0"
authors = ["RPS Game"]
homepage = "https://polkadot.com/"
license = "GPL-3.0-or-later"
edition = "2024"

[workspace.dependencies]
pvm-contract-sdk = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "sm/cdm", features = ["alloc"] }
polkavm-derive = "0.31"
picoalloc = "5.2"
